--- a/index.html
+++ b/index.html
@@ -3568,7 +3568,7 @@ var pagenav_next = "Next";
 <div class='header section' id='header' name='Logo & Title'><div class='widget Header' data-version='1' id='Header1'>
 <div id='header-inner'>
 <a href='https://valdy-portfolio.blogspot.com/' style='display: block'><h1 style='display:none'>Valdy's Portfolio</h1>
-<img alt="Valdy&#39;s Portfolio" height="56px; " id="Header1_headerimg" src="//2.bp.blogspot.com/-Smm8qOlDPNg/W4ZSCkHD1rI/AAAAAAAAFiI/j_yJYU78kY4vqRpSzUm1xXeKze3PJaP2QCK4BGAYYCw/s1600/Folio.png" style="display: block" width="150px; ">
+<img alt="Valdy&#39;s Portfolio" height="56px; " id="Header1_headerimg" src="https://drive.google.com/uc?export=view&id=10ts5Vx_nhYwWA2P9Z5YY-VYcodVNqfA1" style="display: block" width="150px; ">
 </a>
 </div>
 </div></div>
