--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href='//cdn.linearicons.com/free/1.0.0/icon-font.min.css' rel='stylesheet'/>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
 <meta content='blogger' name='generator'/>
-<link href='https://valdy-portfolio.blogspot.com/favicon.ico' rel='icon' type='image/x-icon'/>
+<link href='https://drive.google.com/uc?export=view&id=1NhBTdfdBqyUKDR_sGLLrR5Us7aDX1yct' rel='icon' type='image/x-icon'/>
 <link href='https://valdy-portfolio.blogspot.com/' rel='canonical'/>
 <link rel="alternate" type="application/atom+xml" title="Valdy&#39;s Portfolio - Atom" href="https://valdy-portfolio.blogspot.com/feeds/posts/default" />
 <link rel="alternate" type="application/rss+xml" title="Valdy&#39;s Portfolio - RSS" href="https://valdy-portfolio.blogspot.com/feeds/posts/default?alt=rss" />
@@ -3568,7 +3568,7 @@ var pagenav_next = "Next";
 <div class='header section' id='header' name='Logo & Title'><div class='widget Header' data-version='1' id='Header1'>
 <div id='header-inner'>
 <a href='https://valdy-portfolio.blogspot.com/' style='display: block'><h1 style='display:none'>Valdy's Portfolio</h1>
-<img alt="Valdy&#39;s Portfolio" height="56px; " id="Header1_headerimg" src="https://drive.google.com/uc?export=view&id=1Eqicp4v1Ub-HMJDbHRiTaIzMF0IAds2Q" style="display: block" width="150px; ">
+<img alt="Valdy&#39;s Portfolio" height="56px; " id="Header1_headerimg" src="https://drive.google.com/uc?export=view&id=1uqjWu10r1mNyqFssjv-HYKXmD2g3I7jt" style="display: block" width="150px; ">
 </a>
 </div>
 </div></div>
