--- a/index.html
+++ b/index.html
@@ -3563,7 +3563,7 @@ var pagenav_next = "Next";
 <div class='header section' id='header' name='Logo & Title'><div class='widget Header' data-version='1' id='Header1'>
 <div id='header-inner'>
 <a href='https://valdy-portfolio.blogspot.com/' style='display: block'><h1 style='display:none'>Valdy's Portfolio</h1>
-<img alt="Valdy&#39;s Portfolio" id="Header1_headerimg" src="https://drive.google.com/uc?export=view&id=1uqjWu10r1mNyqFssjv-HYKXmD2g3I7jt" style="display: block" width="150px; ">
+<img alt="Valdy&#39;s Portfolio" height="56px; " id="Header1_headerimg" src="https://drive.google.com/uc?export=view&id=1uqjWu10r1mNyqFssjv-HYKXmD2g3I7jt" style="display: block" width="150px; ">
 </a>
 </div>
 </div></div>
